--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.16.0",
     "react": "18.1.0",
     "react-native": "0.70.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
