--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~47.0.12",
+    "expo-google-sign-in": "^11.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.16.0",
     "react": "18.1.0",
