--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~47.0.12",
-    "expo-google-sign-in": "^11.0.0",
+    "expo-constants": "~14.0.2",
+    "expo-linking": "~3.3.1",
+    "expo-network": "~5.0.0",
     "expo-status-bar": "~1.4.2",
-    "firebase": "^9.16.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "typescript": "^4.6.3"
+  },
+  "expo-yarn-workspaces": {
+    "symlinks": [
+      "expo-constants"
+    ]
   },
   "private": true
 }
