--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@tanstack/react-query": "^4.28.0",
     "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
@@ -20,8 +21,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-query": "^3.39.3"
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
