--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "expo-secure-store": "~12.0.0"
+    "expo-secure-store": "~12.0.0",
+    "expo-auth-session": "~3.8.0",
+    "expo-crypto": "~12.0.0",
+    "expo-web-browser": "~12.0.0",
+    "expo-application": "~5.0.1",
+    "expo-random": "~13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
