Add owner field

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Aeroday 2023",
     "slug": "aeroday-2023",
+    "owner": "M0ngi",
     "scheme": "aero",
     "version": "1.0.0",
     "orientation": "portrait",
