--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "expo-crypto": "~12.0.0",
     "expo-web-browser": "~12.0.0",
     "expo-application": "~5.0.1",
-    "expo-random": "~13.0.0"
+    "expo-random": "~13.0.0",
+    "react-native-svg": "13.4.0",
+    "expo-font": "~11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
