--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@tanstack/react-query": "^4.28.0",
     "axios": "^1.3.4",
     "expo": "~47.0.12",
+    "expo-application": "~5.0.1",
+    "expo-auth-session": "~3.8.0",
     "expo-constants": "~14.0.2",
+    "expo-crypto": "~12.0.0",
+    "expo-font": "~11.0.1",
     "expo-linking": "~3.3.1",
     "expo-network": "~5.0.0",
+    "expo-random": "~13.0.0",
+    "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "~12.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "expo-secure-store": "~12.0.0",
-    "expo-auth-session": "~3.8.0",
-    "expo-crypto": "~12.0.0",
-    "expo-web-browser": "~12.0.0",
-    "expo-application": "~5.0.1",
-    "expo-random": "~13.0.0",
-    "react-native-svg": "13.4.0",
-    "expo-font": "~11.0.1"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
