--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~47.0.12",
     "expo-application": "~5.0.1",
     "expo-auth-session": "~3.8.0",
+    "expo-av": "~13.0.3",
     "expo-constants": "~14.0.2",
     "expo-crypto": "~12.0.0",
     "expo-font": "~11.0.1",
@@ -32,8 +33,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-av": "~13.0.3"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
