--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-web-browser": "~12.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-responsive-checker": "^0.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
