--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eas-build-pre-install": "echo $GOOGLE_AUTH | base64 --decode > ./googleAuth.json"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
