--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
         "foregroundImage": "./assets/Images/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.aeroday.vote2023"
+      "package": "com.aeroday.vote2023",
+      "versionCode": 2
     },
     "web": {
       "favicon": "./assets/logo.png"
