--- a/eas.json
+++ b/eas.json
@@ -26,6 +26,11 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "android": {
+        "serviceAccountKeyPath": "./service-acc-api.json.json",
+        "track": "internal"
+      }
+    }
   }
 }
