--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --port 19000",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -15,7 +15,7 @@
     "@tanstack/react-query": "^4.28.0",
     "@types/react-native-vector-icons": "^6.4.13",
     "axios": "^1.3.4",
-    "expo": "~47.0.12",
+    "expo": "^50.0.4",
     "expo-application": "~5.0.1",
     "expo-auth-session": "~3.8.0",
     "expo-av": "~13.0.3",
@@ -23,19 +23,19 @@
     "expo-crypto": "~12.0.0",
     "expo-font": "~11.0.1",
     "expo-linking": "~3.3.1",
+    "expo-location": "~15.0.1",
     "expo-network": "~5.0.0",
     "expo-random": "~13.0.0",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-web-browser": "~12.0.0",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "18.2.0",
+    "react-native": "0.73.3",
     "react-native-responsive-checker": "^0.1.0",
-    "react-native-safe-area-context": "4.4.1",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-location": "~15.0.1"
+    "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
