--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.aeroday.vote2023"
     },
     "android": {
       "adaptiveIcon": {
@@ -32,7 +33,8 @@
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.aeroday.vote2023",
-      "versionCode": 5
+      "versionCode": 5,
+      "targetSdkVersion": 35
     },
     "web": {
       "favicon": "./assets/logo.png"
