--- a/package.json
+++ b/package.json
@@ -4,43 +4,42 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --port 19000",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "release": "commit-and-tag-version --releaseCommitMessageFormat='chore(release): {{currentTag}}'"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@tanstack/react-query": "^4.28.0",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@tanstack/react-query": "^5.85.5",
     "@types/react-native-vector-icons": "^6.4.13",
     "axios": "^1.3.4",
-    "expo": "~50.0.5",
-    "expo-application": "~5.8.3",
-    "expo-auth-session": "~5.4.0",
-    "expo-av": "~13.10.4",
-    "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.0",
-    "expo-font": "~11.10.2",
-    "expo-linking": "~6.2.2",
-    "expo-network": "~5.8.0",
+    "expo": "53.0.22",
+    "expo-application": "~6.1.5",
+    "expo-auth-session": "~6.2.1",
+    "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
+    "expo-font": "~13.3.2",
+    "expo-linking": "~7.1.7",
+    "expo-network": "~7.1.5",
     "expo-random": "~13.6.0",
-    "expo-secure-store": "~12.8.1",
-    "expo-status-bar": "~1.11.1",
-    "expo-web-browser": "~12.8.2",
-    "react": "18.2.0",
-    "react-native": "0.73.2",
+    "expo-secure-store": "~14.2.4",
+    "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-responsive-checker": "^0.1.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "~0.70.6",
-    "typescript": "^5.3.0"
+    "commit-and-tag-version": "^12.5.2",
+    "typescript": "~5.8.3"
   },
   "expo-yarn-workspaces": {
     "symlinks": [
